--- a/index.html
+++ b/index.html
@@ -57,18 +57,32 @@
             >
           </li>
         </ul>
+        <div class="mobile-menu" data-menu>
+          <button class="close-btn" data-menu-close>
+            <svg class="close-icon" width="18.67" height="18.67">
+              <use href="./img/sprite.svg#icon-close-icon">
+              </use>
+            </svg>
+          </button>
+        </div>
+        <button class="burger-btn" data-menu-open>
+          <svg class="burger-icon" width="24" height="16">
+            <use href="./img/sprite.svg#icon-burger-btn">
+            </use>
+          </svg>
+        </button>
       </div>
     </header>
     <main>
-      <section class="hero">
+    <!--   <section class="hero">
         <div class="container hero-container">
           <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
           <button class="btn btn-studio" data-modal-open type="button">
             Заказать услугу
           </button>
         </div>
-      </section>
-      <section class="about">
+      </section> -->
+     <!--  <section class="about">
         <div class="container">
           <ul class="about-list list">
             <li class="about-flex">
@@ -121,8 +135,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="about-two">
+      </section> -->
+     <!--  <section class="about-two">
         <div class="container">
           <h2 class="about-title">Чем мы занимаемся</h2>
           <ul class="about-title-list list">
@@ -155,8 +169,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="team">
+      </section> -->
+     <!--  <section class="team">
         <div class="container">
           <h2 class="team-title">Наша команда</h2>
           <ul class="team-list list">
@@ -333,8 +347,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="clients">
+      </section> -->
+     <!--  <section class="clients">
         <div class="container">
           <h2 class="clients-title">Постоянные клиенты</h2>
           <ul class="clients-list list">
@@ -376,10 +390,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
     <footer class="footer">
-      <div class="container footer-cont">
+     <!--  <div class="container footer-cont">
         <div class="footer-left">
           <a class="footer-logo link" href=""
             >Web<span class="footer-studio">Studio</span></a
@@ -458,9 +472,9 @@
             </svg>
           </button>
         </form>
-      </div>
-    </footer>
-    <div class="backdrop is-hidden" data-modal>
+      </div> -->
+ <!--   -->  </footer>
+  <!--   <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-btn" data-modal-close>
           <svg class="modal-close-icon" width="18" height="18">
@@ -536,8 +550,9 @@
           </button>
         </form>
       </div>
-    </div>
-    <script src="./js/modal.js"></script>
+    </div> -->
+   <!--  <script src="./js/modal.js"></script> -->
+  <script src="./js/menu.js"></script>
   </body>
 </html>
 
