--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header class="header">
+   <!--  <header class="header">
       <div class="container header-container">
         <nav class="header-nav">
           <a class="header__logo link" href=""
@@ -58,9 +58,9 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <main>
-      <section class="portfolio-sect">
+     <!--  <section class="portfolio-sect">
         <div class="container">
           <ul class="filters list">
             <li class="filters-item">
@@ -233,9 +233,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-cont">
         <div class="footer-left">
           <a class="footer-logo link" href=""
@@ -316,6 +316,6 @@
           </button>
         </form>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
