--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
               <a class="menu__link link menu__page-link" href="">Студия</a>
             </li>
             <li class="menu__item">
-              <a class="menu__link link menu__link--color" href="./portfolio.html"
+              <a
+                class="menu__link link menu__link--color"
+                href="./portfolio.html"
                 >Портфолио</a
               >
             </li>
@@ -47,7 +49,7 @@
               <svg class="contacts__icon" width="16" height="12">
                 <use href="./img/sprite.svg#icon-envelope-hover"></use></svg
               >info@devstudio.com</a
-              >
+            >
           </li>
           <li>
             <a class="contacts__tel link" href="tel:+380961111111"
@@ -60,21 +62,74 @@
         <div class="mobile-menu" data-menu>
           <button class="close-btn" data-menu-close>
             <svg class="close-icon" width="18.67" height="18.67">
-              <use href="./img/sprite.svg#icon-close-icon">
-              </use>
+              <use href="./img/sprite.svg#icon-close-icon"></use>
             </svg>
           </button>
+          <div class="mob-menu">
+            <ul class="list mobile-menu__list">
+              <li class="mob-menu__item">
+                <a class="mob-menu__link link menu__page-link" href=""
+                  >Студия</a
+                >
+              </li>
+              <li class="mob-menu__item">
+                <a
+                  class="mob-menu__link link menu__link--color"
+                  href="./portfolio.html"
+                  >Портфолио</a
+                >
+              </li>
+              <li class="mob-menu__item">
+                <a class="mob-menu__link link menu__link--color" href=""
+                  >Контакты</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="menu-down">
+            <div class="cont-menu">
+              <ul class="list mob-contacts">
+                <li class="mob-contacts__item">
+                  <a class="mob-contacts__tel link" href="tel:+380961111111"
+                    >+38 096 111 11 11</a
+                  >
+                </li>
+                <li class="mob-contacts__item">
+                  <a
+                    class="mob-contacts__mail link"
+                    href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+              </ul>
+            </div>
+            <div class="soc-menu">
+              <ul class="soc-menu__list list">
+                <li class="soc-menu__item">
+                  <a href="#" class="soc-menu__link link">Instagram</a>
+                </li>
+                <li class="soc-menu__item">
+                  <a href="#" class="soc-menu__link link">Twitter</a>
+                </li>
+                <li class="soc-menu__item">
+                  <a href="#" class="soc-menu__link link">Facebook</a>
+                </li>
+                <li class="soc-menu__item">
+                  <a href="#" class="soc-menu__link link">LinkedIn</a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
         <button class="burger-btn" data-menu-open>
           <svg class="burger-icon" width="24" height="16">
-            <use href="./img/sprite.svg#icon-burger-btn">
-            </use>
+            <use href="./img/sprite.svg#icon-burger-btn"></use>
           </svg>
         </button>
       </div>
     </header>
     <main>
-    <!--   <section class="hero">
+      <!--   <section class="hero">
         <div class="container hero-container">
           <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
           <button class="btn btn-studio" data-modal-open type="button">
@@ -82,7 +137,7 @@
           </button>
         </div>
       </section> -->
-     <!--  <section class="about">
+      <!--  <section class="about">
         <div class="container">
           <ul class="about-list list">
             <li class="about-flex">
@@ -136,7 +191,7 @@
           </ul>
         </div>
       </section> -->
-     <!--  <section class="about-two">
+      <!--  <section class="about-two">
         <div class="container">
           <h2 class="about-title">Чем мы занимаемся</h2>
           <ul class="about-title-list list">
@@ -170,7 +225,7 @@
           </ul>
         </div>
       </section> -->
-     <!--  <section class="team">
+      <!--  <section class="team">
         <div class="container">
           <h2 class="team-title">Наша команда</h2>
           <ul class="team-list list">
@@ -348,7 +403,7 @@
           </ul>
         </div>
       </section> -->
-     <!--  <section class="clients">
+      <!--  <section class="clients">
         <div class="container">
           <h2 class="clients-title">Постоянные клиенты</h2>
           <ul class="clients-list list">
@@ -393,7 +448,7 @@
       </section> -->
     </main>
     <footer class="footer">
-     <!--  <div class="container footer-cont">
+      <!--  <div class="container footer-cont">
         <div class="footer-left">
           <a class="footer-logo link" href=""
             >Web<span class="footer-studio">Studio</span></a
@@ -473,8 +528,9 @@
           </button>
         </form>
       </div> -->
- <!--   -->  </footer>
-  <!--   <div class="backdrop is-hidden" data-modal>
+      <!--   -->
+    </footer>
+    <!--   <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-btn" data-modal-close>
           <svg class="modal-close-icon" width="18" height="18">
@@ -551,8 +607,7 @@
         </form>
       </div>
     </div> -->
-   <!--  <script src="./js/modal.js"></script> -->
-  <script src="./js/menu.js"></script>
+    <!--  <script src="./js/modal.js"></script> -->
+    <script src="./js/menu.js"></script>
   </body>
 </html>
-
