--- a/index.html
+++ b/index.html
@@ -129,15 +129,15 @@
       </div>
     </header>
     <main>
-      <!--   <section class="hero">
+      <section class="hero">
         <div class="container hero-container">
           <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
           <button class="btn btn-studio" data-modal-open type="button">
             Заказать услугу
           </button>
         </div>
-      </section> -->
-      <!--  <section class="about">
+      </section>
+      <section class="about">
         <div class="container">
           <ul class="about-list list">
             <li class="about-flex">
@@ -190,7 +190,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!--  <section class="about-two">
         <div class="container">
           <h2 class="about-title">Чем мы занимаемся</h2>
