--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           </ul>
         </div>
       </section>
-      <!--  <section class="about-two">
+      <section class="about-two">
         <div class="container">
           <h2 class="about-title">Чем мы занимаемся</h2>
           <ul class="about-title-list list">
@@ -224,8 +224,8 @@
             </li>
           </ul>
         </div>
-      </section> -->
-      <!--  <section class="team">
+      </section>
+      <section class="team">
         <div class="container">
           <h2 class="team-title">Наша команда</h2>
           <ul class="team-list list">
@@ -402,7 +402,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!--  <section class="clients">
         <div class="container">
           <h2 class="clients-title">Постоянные клиенты</h2>
