--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
           </ul>
         </div>
       </section>
-      <!--  <section class="clients">
+       <section class="clients">
         <div class="container">
           <h2 class="clients-title">Постоянные клиенты</h2>
           <ul class="clients-list list">
@@ -448,7 +448,7 @@
       </section> -->
     </main>
     <footer class="footer">
-      <!--  <div class="container footer-cont">
+      <div class="container footer-cont">
         <div class="footer-left">
           <a class="footer-logo link" href=""
             >Web<span class="footer-studio">Studio</span></a
@@ -512,6 +512,7 @@
         </div>
         <form class="third block">
           <p class="social">Подпишитесь на рассылку</p>
+         <div class="form-btn">
           <label class="form-field">
             <input
               type="email"
@@ -526,11 +527,11 @@
               <use href="./img/sprite.svg#icon-icon-send"></use>
             </svg>
           </button>
+        </div>
         </form>
-      </div> -->
-      <!--   -->
+      </div>
     </footer>
-    <!--   <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-btn" data-modal-close>
           <svg class="modal-close-icon" width="18" height="18">
@@ -607,7 +608,7 @@
         </form>
       </div>
     </div> -->
-    <!--  <script src="./js/modal.js"></script> -->
+    <script src="./js/modal.js"></script>
     <script src="./js/menu.js"></script>
   </body>
 </html>
