--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-   <!--  <header class="header">
+    <header class="header">
       <div class="container header-container">
         <nav class="header-nav">
           <a class="header__logo link" href=""
@@ -29,10 +29,12 @@
           >
           <ul class="list menu">
             <li class="menu__item">
-              <a class="menu__link link menu__link--color" href="./index.html">Студия</a>
+              <a class="menu__link link menu__page-link" href="">Студия</a>
             </li>
             <li class="menu__item">
-              <a class="menu__link link menu__page-link" href=""
+              <a
+                class="menu__link link menu__link--color"
+                href="./portfolio.html"
                 >Портфолио</a
               >
             </li>
@@ -47,7 +49,7 @@
               <svg class="contacts__icon" width="16" height="12">
                 <use href="./img/sprite.svg#icon-envelope-hover"></use></svg
               >info@devstudio.com</a
-              >
+            >
           </li>
           <li>
             <a class="contacts__tel link" href="tel:+380961111111"
@@ -57,10 +59,77 @@
             >
           </li>
         </ul>
+        <div class="mobile-menu" data-menu>
+          <button class="close-btn" data-menu-close>
+            <svg class="close-icon" width="18.67" height="18.67">
+              <use href="./img/sprite.svg#icon-close-icon"></use>
+            </svg>
+          </button>
+          <div class="mob-menu">
+            <ul class="list mobile-menu__list">
+              <li class="mob-menu__item">
+                <a class="mob-menu__link link menu__page-link" href=""
+                  >Студия</a
+                >
+              </li>
+              <li class="mob-menu__item">
+                <a
+                  class="mob-menu__link link menu__link--color"
+                  href="./portfolio.html"
+                  >Портфолио</a
+                >
+              </li>
+              <li class="mob-menu__item">
+                <a class="mob-menu__link link menu__link--color" href=""
+                  >Контакты</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="menu-down">
+            <div class="cont-menu">
+              <ul class="list mob-contacts">
+                <li class="mob-contacts__item">
+                  <a class="mob-contacts__tel link" href="tel:+380961111111"
+                    >+38 096 111 11 11</a
+                  >
+                </li>
+                <li class="mob-contacts__item">
+                  <a
+                    class="mob-contacts__mail link"
+                    href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+              </ul>
+            </div>
+            <div class="soc-menu">
+              <ul class="soc-menu__list list">
+                <li class="soc-menu__item">
+                  <a href="#" class="soc-menu__link link">Instagram</a>
+                </li>
+                <li class="soc-menu__item">
+                  <a href="#" class="soc-menu__link link">Twitter</a>
+                </li>
+                <li class="soc-menu__item">
+                  <a href="#" class="soc-menu__link link">Facebook</a>
+                </li>
+                <li class="soc-menu__item">
+                  <a href="#" class="soc-menu__link link">LinkedIn</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <button class="burger-btn" data-menu-open>
+          <svg class="burger-icon" width="24" height="16">
+            <use href="./img/sprite.svg#icon-burger-btn"></use>
+          </svg>
+        </button>
       </div>
-    </header> -->
+    </header>
     <main>
-     <!--  <section class="portfolio-sect">
+     <section class="portfolio-sect">
         <div class="container">
           <ul class="filters list">
             <li class="filters-item">
@@ -85,12 +154,15 @@
             <li>
               <a href="" class="portfolio-item link">
                 <div class="portfolio-over">
-                <img
-                src="./img/portfolio-1.jpg"
+                <picture>
+                  <source media="(max-width: )" 
+                  srcset="./img/portfolio/portfolio-img1-desk-min.jpeg 1x, 
+                  .img/portfolio/portfolio-img1-desk@2x-min.jpeg 2x"/>
+                  <img
+                src="#"
                 alt="На ноутбуке открыта страница сайта"
-                width="370"
-                height="294"
-              />
+                
+              /></picture>
               <p class="portfolio-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.</p>
             </div>
               <div class="portfolio-item-desc">
@@ -233,9 +305,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-cont">
         <div class="footer-left">
           <a class="footer-logo link" href=""
@@ -300,6 +372,7 @@
         </div>
         <form class="third block">
           <p class="social">Подпишитесь на рассылку</p>
+         <div class="form-btn">
           <label class="form-field">
             <input
               type="email"
@@ -314,8 +387,11 @@
               <use href="./img/sprite.svg#icon-icon-send"></use>
             </svg>
           </button>
+        </div>
         </form>
       </div>
-    </footer> -->
+    </footer>
+    <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
