--- a/portfolio.html
+++ b/portfolio.html
@@ -155,13 +155,27 @@
               <a href="" class="portfolio-item link">
                 <div class="portfolio-over">
                 <picture>
-                  <source media="(max-width: )" 
+                  <source media="(min-width: 1200px)" 
+                  srcset="./img/portfolio/portfolio-img1-desk-min.webp 1x, 
+                  ./img/portfolio/portfolio-img1-desk@2x-min.webp 2x" type="image/webp"/>
+                  <source media="(min-width: 1200px)" 
                   srcset="./img/portfolio/portfolio-img1-desk-min.jpeg 1x, 
-                  .img/portfolio/portfolio-img1-desk@2x-min.jpeg 2x"/>
+                  ./img/portfolio/portfolio-img1-desk@2x-min.jpeg 2x"/>
+                  <source media="(min-width: 768px)" 
+                  srcset="./img/portfolio/portfolio-img1-tablet-min.webp 1x, 
+                  ./img/portfolio/portfolio-img1-tablet@2x-min.webp 2x" type="image/webp"/>
+                  <source media="(min-width: 768px)" 
+                  srcset="./img/portfolio/portfolio-img1-tablet-min.jpeg 1x, 
+                  ./img/portfolio/portfolio-img1-tablet@2x-min.jpeg 2x"/>
+                  <source media="(max-width: 767px)" 
+                  srcset="./img/portfolio/portfolio-img1-mob-min.webp 1x, 
+                  ./img/portfolio/portfolio-img1-mob@2x-min.webp 2x" type="image/webp"/>
+                  <source media="(max-width: 767px)" 
+                  srcset="./img/portfolio/portfolio-img1-mob-min.jpeg 1x, 
+                  ./img/portfolio/portfolio-img1-mob@2x-min.jpeg 2x"/>
                   <img
                 src="#"
                 alt="На ноутбуке открыта страница сайта"
-                
               /></picture>
               <p class="portfolio-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.</p>
             </div>
@@ -173,12 +187,29 @@
             </li>
             <li>
               <a href="" class="portfolio-item link"> <div class="portfolio-over">
+                <picture>
+                  <source media="(min-width: 1200px)" 
+                  srcset="./img/portfolio/portfolio-img1-desk-min.webp 1x, 
+                  ./img/portfolio/portfolio-img1-desk@2x-min.webp 2x" type="image/webp"/>
+                  <source media="(min-width: 1200px)" 
+                  srcset="./img/portfolio/portfolio-img1-desk-min.jpeg 1x, 
+                  ./img/portfolio/portfolio-img1-desk@2x-min.jpeg 2x"/>
+                  <source media="(min-width: 768px)" 
+                  srcset="./img/portfolio/portfolio-img1-tablet-min.webp 1x, 
+                  ./img/portfolio/portfolio-img1-tablet@2x-min.webp 2x" type="image/webp"/>
+                  <source media="(min-width: 768px)" 
+                  srcset="./img/portfolio/portfolio-img1-tablet-min.jpeg 1x, 
+                  ./img/portfolio/portfolio-img1-tablet@2x-min.jpeg 2x"/>
+                  <source media="(max-width: 767px)" 
+                  srcset="./img/portfolio/portfolio-img1-mob-min.webp 1x, 
+                  ./img/portfolio/portfolio-img1-mob@2x-min.webp 2x" type="image/webp"/>
+                  <source media="(max-width: 767px)" 
+                  srcset="./img/portfolio/portfolio-img1-mob-min.jpeg 1x, 
+                  ./img/portfolio/portfolio-img1-mob@2x-min.jpeg 2x"/>
               <img
-                src="./img/portfolio-2.jpg"
+                src="#"
                 alt="Мужчины играют в баскетбол"
-                width="370"
-                height="294"
-              />
+              /></picture>
               <p class="portfolio-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.</p>
             </div>
               <div class="portfolio-item-desc">
@@ -190,12 +221,29 @@
             </li>
             <li>
               <a href="" class="portfolio-item link"> <div class="portfolio-over">
+                <picture>
+                  <source media="(min-width: 1200px)" 
+                  srcset="./img/portfolio/portfolio-img1-desk-min.webp 1x, 
+                  ./img/portfolio/portfolio-img1-desk@2x-min.webp 2x" type="image/webp"/>
+                  <source media="(min-width: 1200px)" 
+                  srcset="./img/portfolio/portfolio-img1-desk-min.jpeg 1x, 
+                  ./img/portfolio/portfolio-img1-desk@2x-min.jpeg 2x"/>
+                  <source media="(min-width: 768px)" 
+                  srcset="./img/portfolio/portfolio-img1-tablet-min.webp 1x, 
+                  ./img/portfolio/portfolio-img1-tablet@2x-min.webp 2x" type="image/webp"/>
+                  <source media="(min-width: 768px)" 
+                  srcset="./img/portfolio/portfolio-img1-tablet-min.jpeg 1x, 
+                  ./img/portfolio/portfolio-img1-tablet@2x-min.jpeg 2x"/>
+                  <source media="(max-width: 767px)" 
+                  srcset="./img/portfolio/portfolio-img1-mob-min.webp 1x, 
+                  ./img/portfolio/portfolio-img1-mob@2x-min.webp 2x" type="image/webp"/>
+                  <source media="(max-width: 767px)" 
+                  srcset="./img/portfolio/portfolio-img1-mob-min.jpeg 1x, 
+                  ./img/portfolio/portfolio-img1-mob@2x-min.jpeg 2x"/>
               <img
-                src="./img/portfolio-3.jpg"
+                src="#"
                 alt="Эмблема ресторана"
-                width="370"
-                height="294"
-              />
+              /></picture>
               <p class="portfolio-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.</p>
             </div>
               <div class="portfolio-item-desc">
@@ -207,12 +255,29 @@
             </li>
             <li>
               <a href="" class="portfolio-item link"> <div class="portfolio-over">
+                <picture>
+                  <source media="(min-width: 1200px)" 
+                  srcset="./img/portfolio/portfolio-img1-desk-min.webp 1x, 
+                  ./img/portfolio/portfolio-img1-desk@2x-min.webp 2x" type="image/webp"/>
+                  <source media="(min-width: 1200px)" 
+                  srcset="./img/portfolio/portfolio-img1-desk-min.jpeg 1x, 
+                  ./img/portfolio/portfolio-img1-desk@2x-min.jpeg 2x"/>
+                  <source media="(min-width: 768px)" 
+                  srcset="./img/portfolio/portfolio-img1-tablet-min.webp 1x, 
+                  ./img/portfolio/portfolio-img1-tablet@2x-min.webp 2x" type="image/webp"/>
+                  <source media="(min-width: 768px)" 
+                  srcset="./img/portfolio/portfolio-img1-tablet-min.jpeg 1x, 
+                  ./img/portfolio/portfolio-img1-tablet@2x-min.jpeg 2x"/>
+                  <source media="(max-width: 767px)" 
+                  srcset="./img/portfolio/portfolio-img1-mob-min.webp 1x, 
+                  ./img/portfolio/portfolio-img1-mob@2x-min.webp 2x" type="image/webp"/>
+                  <source media="(max-width: 767px)" 
+                  srcset="./img/portfolio/portfolio-img1-mob-min.jpeg 1x, 
+                  ./img/portfolio/portfolio-img1-mob@2x-min.jpeg 2x"/>
               <img
-                src="./img/portfolio-4.jpg"
+                src="#"
                 alt="Черные наушники"
-                width="370"
-                height="294"
-              />
+              /></picture>
               <p class="portfolio-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.</p>
             </div>
               <div class="portfolio-item-desc">
@@ -224,12 +289,29 @@
             </li>
             <li>
               <a href="" class="portfolio-item link"> <div class="portfolio-over">
+                <picture>
+                  <source media="(min-width: 1200px)" 
+                  srcset="./img/portfolio/portfolio-img1-desk-min.webp 1x, 
+                  ./img/portfolio/portfolio-img1-desk@2x-min.webp 2x" type="image/webp"/>
+                  <source media="(min-width: 1200px)" 
+                  srcset="./img/portfolio/portfolio-img1-desk-min.jpeg 1x, 
+                  ./img/portfolio/portfolio-img1-desk@2x-min.jpeg 2x"/>
+                  <source media="(min-width: 768px)" 
+                  srcset="./img/portfolio/portfolio-img1-tablet-min.webp 1x, 
+                  ./img/portfolio/portfolio-img1-tablet@2x-min.webp 2x" type="image/webp"/>
+                  <source media="(min-width: 768px)" 
+                  srcset="./img/portfolio/portfolio-img1-tablet-min.jpeg 1x, 
+                  ./img/portfolio/portfolio-img1-tablet@2x-min.jpeg 2x"/>
+                  <source media="(max-width: 767px)" 
+                  srcset="./img/portfolio/portfolio-img1-mob-min.webp 1x, 
+                  ./img/portfolio/portfolio-img1-mob@2x-min.webp 2x" type="image/webp"/>
+                  <source media="(max-width: 767px)" 
+                  srcset="./img/portfolio/portfolio-img1-mob-min.jpeg 1x, 
+                  ./img/portfolio/portfolio-img1-mob@2x-min.jpeg 2x"/>
               <img
-                src="./img/portfolio-5.jpg"
+                src="#"
                 alt="Коробки лежат на поверхности"
-                width="370"
-                height="294"
-              />
+              /></picture>
               <p class="portfolio-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.</p>
             </div>
               <div class="portfolio-item-desc">
@@ -241,12 +323,29 @@
             </li>
             <li>
               <a href="" class="portfolio-item link"> <div class="portfolio-over">
-              <img
-                src="./img/portfolio-6.jpg"
+                <picture>
+                  <source media="(min-width: 1200px)" 
+                  srcset="./img/portfolio/portfolio-img1-desk-min.webp 1x, 
+                  ./img/portfolio/portfolio-img1-desk@2x-min.webp 2x" type="image/webp"/>
+                  <source media="(min-width: 1200px)" 
+                  srcset="./img/portfolio/portfolio-img1-desk-min.jpeg 1x, 
+                  ./img/portfolio/portfolio-img1-desk@2x-min.jpeg 2x"/>
+                  <source media="(min-width: 768px)" 
+                  srcset="./img/portfolio/portfolio-img1-tablet-min.webp 1x, 
+                  ./img/portfolio/portfolio-img1-tablet@2x-min.webp 2x" type="image/webp"/>
+                  <source media="(min-width: 768px)" 
+                  srcset="./img/portfolio/portfolio-img1-tablet-min.jpeg 1x, 
+                  ./img/portfolio/portfolio-img1-tablet@2x-min.jpeg 2x"/>
+                  <source media="(max-width: 767px)" 
+                  srcset="./img/portfolio/portfolio-img1-mob-min.webp 1x, 
+                  ./img/portfolio/portfolio-img1-mob@2x-min.webp 2x" type="image/webp"/>
+                  <source media="(max-width: 767px)" 
+                  srcset="./img/portfolio/portfolio-img1-mob-min.jpeg 1x, 
+                  ./img/portfolio/portfolio-img1-mob@2x-min.jpeg 2x"/>
+                <img
+                src="#"
                 alt="Монитор включен"
-                width="370"
-                height="294"
-              />
+              /></picture>
               <p class="portfolio-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.</p>
             </div>
               <div class="portfolio-item-desc">
@@ -256,12 +355,29 @@
             </li>
             <li>
               <a href="" class="portfolio-item link"> <div class="portfolio-over">
-              <img
-                src="./img/portfolio-7.jpg"
+                <picture>
+                  <source media="(min-width: 1200px)" 
+                  srcset="./img/portfolio/portfolio-img1-desk-min.webp 1x, 
+                  ./img/portfolio/portfolio-img1-desk@2x-min.webp 2x" type="image/webp"/>
+                  <source media="(min-width: 1200px)" 
+                  srcset="./img/portfolio/portfolio-img1-desk-min.jpeg 1x, 
+                  ./img/portfolio/portfolio-img1-desk@2x-min.jpeg 2x"/>
+                  <source media="(min-width: 768px)" 
+                  srcset="./img/portfolio/portfolio-img1-tablet-min.webp 1x, 
+                  ./img/portfolio/portfolio-img1-tablet@2x-min.webp 2x" type="image/webp"/>
+                  <source media="(min-width: 768px)" 
+                  srcset="./img/portfolio/portfolio-img1-tablet-min.jpeg 1x, 
+                  ./img/portfolio/portfolio-img1-tablet@2x-min.jpeg 2x"/>
+                  <source media="(max-width: 767px)" 
+                  srcset="./img/portfolio/portfolio-img1-mob-min.webp 1x, 
+                  ./img/portfolio/portfolio-img1-mob@2x-min.webp 2x" type="image/webp"/>
+                  <source media="(max-width: 767px)" 
+                  srcset="./img/portfolio/portfolio-img1-mob-min.jpeg 1x, 
+                  ./img/portfolio/portfolio-img1-mob@2x-min.jpeg 2x"/>
+                <img
+                src="#"
                 alt="Открытая книга лежит"
-                width="370"
-                height="294"
-              />
+              /></picture>
               <p class="portfolio-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.</p>
             </div>
               <div class="portfolio-item-desc">
@@ -273,12 +389,29 @@
             </li>
             <li>
               <a href="" class="portfolio-item link"> <div class="portfolio-over">
-              <img
-                src="./img/portfolio-8.jpg"
+                <picture>
+                  <source media="(min-width: 1200px)" 
+                  srcset="./img/portfolio/portfolio-img1-desk-min.webp 1x, 
+                  ./img/portfolio/portfolio-img1-desk@2x-min.webp 2x" type="image/webp"/>
+                  <source media="(min-width: 1200px)" 
+                  srcset="./img/portfolio/portfolio-img1-desk-min.jpeg 1x, 
+                  ./img/portfolio/portfolio-img1-desk@2x-min.jpeg 2x"/>
+                  <source media="(min-width: 768px)" 
+                  srcset="./img/portfolio/portfolio-img1-tablet-min.webp 1x, 
+                  ./img/portfolio/portfolio-img1-tablet@2x-min.webp 2x" type="image/webp"/>
+                  <source media="(min-width: 768px)" 
+                  srcset="./img/portfolio/portfolio-img1-tablet-min.jpeg 1x, 
+                  ./img/portfolio/portfolio-img1-tablet@2x-min.jpeg 2x"/>
+                  <source media="(max-width: 767px)" 
+                  srcset="./img/portfolio/portfolio-img1-mob-min.webp 1x, 
+                  ./img/portfolio/portfolio-img1-mob@2x-min.webp 2x" type="image/webp"/>
+                  <source media="(max-width: 767px)" 
+                  srcset="./img/portfolio/portfolio-img1-mob-min.jpeg 1x, 
+                  ./img/portfolio/portfolio-img1-mob@2x-min.jpeg 2x"/>
+                <img
+                src="#"
                 alt="Этикетка висит на нитке"
-                width="370"
-                height="294"
-              />
+              /></picture>
               <p class="portfolio-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.</p>
             </div>
               <div class="portfolio-item-desc">
@@ -290,12 +423,29 @@
             </li>
             <li>
               <a href="" class="portfolio-item link"> <div class="portfolio-over">
-              <img
-                src="./img/portfolio-9.jpg"
+                <picture>
+                  <source media="(min-width: 1200px)" 
+                  srcset="./img/portfolio/portfolio-img1-desk-min.webp 1x, 
+                  ./img/portfolio/portfolio-img1-desk@2x-min.webp 2x" type="image/webp"/>
+                  <source media="(min-width: 1200px)" 
+                  srcset="./img/portfolio/portfolio-img1-desk-min.jpeg 1x, 
+                  ./img/portfolio/portfolio-img1-desk@2x-min.jpeg 2x"/>
+                  <source media="(min-width: 768px)" 
+                  srcset="./img/portfolio/portfolio-img1-tablet-min.webp 1x, 
+                  ./img/portfolio/portfolio-img1-tablet@2x-min.webp 2x" type="image/webp"/>
+                  <source media="(min-width: 768px)" 
+                  srcset="./img/portfolio/portfolio-img1-tablet-min.jpeg 1x, 
+                  ./img/portfolio/portfolio-img1-tablet@2x-min.jpeg 2x"/>
+                  <source media="(max-width: 767px)" 
+                  srcset="./img/portfolio/portfolio-img1-mob-min.webp 1x, 
+                  ./img/portfolio/portfolio-img1-mob@2x-min.webp 2x" type="image/webp"/>
+                  <source media="(max-width: 767px)" 
+                  srcset="./img/portfolio/portfolio-img1-mob-min.jpeg 1x, 
+                  ./img/portfolio/portfolio-img1-mob@2x-min.jpeg 2x"/>
+                <img
+                src="#"
                 alt="Человек печатает на ноутбуке"
-                width="370"
-                height="294"
-              />
+              /></picture>
               <p class="portfolio-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.</p>
             </div>
               <div class="portfolio-item-desc">
